--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "url": "https://github.com/zzzhan/jquery-mytools.git"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^1.1.5",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
     "matchdep": "^1.0.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
