--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
     "matchdep": "^1.0.1"
   },
